--- a/_pgbackup/index_1623856162.html
+++ b/_pgbackup/index_1623856162.html
@@ -111,7 +111,7 @@
                                     <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#"><i class="fa fa-fw fa-instagram"></i></a>
+                                    <a href="#"><i class="fa fa-fw fa-dribbble"></i></a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -123,63 +123,10 @@
                         <div class="bnr-btn">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="#contact">Contáctanos</a>
+                                    <a href="#">Contáctanos</a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a id="myBtn" href="#">Registrate al newsletter</a>
-                                    <div id="myModal" class="modal">
-                                        <!-- Modal content -->
-                                        <div class="modal-content">
-                                            <div class="space" style="height: 50px"></div>
-                                            <div class="row contact-form">
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Nombre">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="email" class="form-control" placeholder="E-mail">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Télefono">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Asunto">
-                                                </div>
-                                                <div class="col-md-12">
-                                                    <textarea class="form-control" rows="3"></textarea>
-                                                    <div class="thegncy-btn">
-                                                        <input class="contact-btn" type="submit" value="Enviar ahora">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <script>
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+                                    <a href="#">Registrate al newsletter</a>
                                 </li>
                             </ul>
                         </div>
@@ -305,7 +252,7 @@ window.onclick = function(event) {
             </div>
         </div>
         <div class="space" style="height: 92px;"></div>
-        <section id="Industria" class="gradient-bg">
+        <section class="gradient-bg">
             <div class="space" style="height: 60px"></div>
             <div class="container">
                 <div class="row justify-content-center">
@@ -396,7 +343,7 @@ window.onclick = function(event) {
             <div class="space" style="height: 60px"></div>
         </section>
         <div class="space" style="height: 100px"></div>
-        <div id="Tech" class="container">
+        <div id="features" class="container">
             <div class="row">
                 <div class="col-lg-5 wow fadeInLeft" data-wow-duration="2.5s">
                     <div class="section-title">
@@ -521,7 +468,7 @@ facial y un score de vida de los individuos procesando esta información de mane
             </div>
         </div>
         <div class="space" style="height: 100px"></div>
-        <section id="" lientes class="gradient-bg">
+        <section class="gradient-bg">
             <div class="space" style="height: 60px"></div>
             <div class="container">
                 <div class="row justify-content-center">
@@ -552,7 +499,7 @@ facial y un score de vida de los individuos procesando esta información de mane
             <div class="space" style="height: 60px"></div>
         </section>
         <div class="space" style="height: 120px"></div>
-        <div id="Equipo" class="row">
+        <div class="row">
             <div class="container">
                 <div class="content-head team_2 text-center">
                     <h2 class="heading--title">EQUIPO FUNDADOR</h2>
