--- a/_pgbackup/index_1623856698.html
+++ b/_pgbackup/index_1623856698.html
@@ -111,7 +111,7 @@
                                     <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#"><i class="fa fa-fw fa-instagram"></i></a>
+                                    <a href="#"><i class="fa fa-fw fa-dribbble"></i></a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="#"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -126,31 +126,16 @@
                                     <a href="#contact">Contáctanos</a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a id="myBtn" href="#">Registrate al newsletter</a>
+                                    <a href="#">Registrate al newsletter</a>
+                                    <h2>Modal Example</h2>
+                                    <!-- Trigger/Open The Modal -->
+                                    <button id="myBtn">Open Modal</button>
+                                    <!-- The Modal -->
                                     <div id="myModal" class="modal">
                                         <!-- Modal content -->
                                         <div class="modal-content">
-                                            <div class="space" style="height: 50px"></div>
-                                            <div class="row contact-form">
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Nombre">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="email" class="form-control" placeholder="E-mail">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Télefono">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <input type="text" class="form-control" placeholder="Asunto">
-                                                </div>
-                                                <div class="col-md-12">
-                                                    <textarea class="form-control" rows="3"></textarea>
-                                                    <div class="thegncy-btn">
-                                                        <input class="contact-btn" type="submit" value="Enviar ahora">
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            <span class="close">&times;</span>
+                                            <p>Some text in the Modal..</p>
                                         </div>
                                     </div>
                                     <script>
