--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="productMenu" data-toggle="dropdown">
+                            <a class="nav-link dropdown-toggle" href="#features3" id="productMenu" data-toggle="dropdown">
                             Productos </a>
                             <div class="dropdown-menu" aria-labelledby="pageMenu">
                                 <a class="dropdown-item" href="blog.html">Apertura Remota</a>
@@ -767,7 +767,7 @@ de tu empresa</h1>
                 </div>
             </column>
             <div class="footer-copyright">
-                <p>Copyrighs @ Bongo Beyond 2019</p>
+                <p>Copyrighs @DICIO</p>
             </div>
         </footer>
         <div id="backtotop">
