--- a/index.html
+++ b/index.html
@@ -98,23 +98,26 @@
                 </div>
             </div>
         </nav>
-        <section id="banner" class="banner bannw">
+        <section id="banner" class="banner banner12 bannw">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 wow fadeInLeft" data-wow-duration="2.5s">
                         <div class="bnr-social">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="#"><i class="fa fa-fw fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/Dicioai"><i class="fa fa-fw fa-facebook"></i></a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
+                                    <a target="_blank" href="https://www.instagram.com/dicio.ai/"><i class="fa fa-fw fa-instagram"></i></a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#"><i class="fa fa-fw fa-instagram"></i></a>
+                                    <a target="_blank" href="https://twitter.com/Dicio_AI"><i class="fa fa-fw fa-twitter"></i></a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a target="_blank" href="https://www.youtube.com/channel/UCJ_8A6YXEs2XxAj3cL9-DEg"><i class="fa fa-fw fa-youtube"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a target="_blank" href="https://www.linkedin.com/company/dicio-ai/mycompany/?viewAsMember=true"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -200,7 +203,7 @@ window.onclick = function(event) {
             <div class="row justify-content-center">
                 <div class="col-md-12">
                     <div class="section-title text-center">
-                        <h1 style="color: #0883f5;">Utiliza Dicio para agilizar procesos dentro de tu organización</h1>
+                        <h1 style="color: #0883f5;">Utiliza DICIO para agilizar procesos dentro de tu organización</h1>
                         <h4><h2>Desarrollamos soluciones para agilizar procesos de identificación digital de una manera fácil y segura&nbsp;</h2></h4>
                     </div>
                     <div class="space" style="height: 40px"></div>
@@ -230,14 +233,28 @@ window.onclick = function(event) {
                     </div>
                     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
                 </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-duration="2.5s">
+                    <div class="service-item">
+                        <i class="flaticon-phone"></i>
+                        <h5><p>OCR: Reconocimiento Óptico de Caracteres&nbsp;</p></h5>
+                    </div>
+                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-duration="2.5s">
+                    <div class="service-item">
+                        <i class="flaticon-phone"></i>
+                        <h5><p>OCR: Reconocimiento Óptico de Caracteres&nbsp;</p></h5>
+                    </div>
+                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                </div>
             </div>
         </div>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2"></lottie-player>
-        <div class="spce2"></div>
-        <div id="Pilares" class="container">
-            <div class="row">
+        <div id="Pilares" class="spce2"></div>
+        <div class="cont12 container">
+            <div class="pilares row">
                 <div class="col-lg-6 col-sm-12 text-center wow fadeInLeft" data-wow-duration="2.5s">
-                    <img class="img-fluid img-shadow" data-tilt src="images/img-3.png" alt="img" style="width: 100%; border-radius: 70px;">
+                    <img class="img-fluid img-shadow" data-tilt src="images/img-3.svg" alt="img" style="width: 100%; border-radius: 70px;">
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 col-sm-12 wow fadeInRight" data-wow-duration="2.5s">
                     <div class="space d-none d-xl-block d-sm-block" style="height: 60px"></div>
@@ -248,7 +265,7 @@ window.onclick = function(event) {
                     </div>
                     <p>Desarrollamos herramientas seguras, inteligentes y vanguardistas para facilitar las interacciones digitales de nuestros clientes</p>
                     <ul>
-                        <li>Optimiza tiempos de respuesta, Mayor disponibilidad</li>
+                        <li>Optimiza tiempos de respuesta, mayor disponibilidad</li>
                         <li>Validación en Blockchain, validación de identidad con tecnología</li>
                         <li>Inclusión financiera y vinculación multicanal</li>
                         <li>Realizamos validaciones con verificación institucional</li>
@@ -261,7 +278,7 @@ window.onclick = function(event) {
             </div>
         </div>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 w-75"></lottie-player>
-        <div class="space" style="height: 256px; margin-top: 0;"></div>
+        <div id="features3" class="space" style="height: 196px; margin-top: 0;"></div>
         <div id="features" class="container">
             <div class="row">
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
@@ -272,22 +289,21 @@ window.onclick = function(event) {
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <h5>Firma digital</h5>
                             <p style="text-align: justify;">Realiza cualquier trámite con tus clientes sin la necesidad de utilizar su firma autógrafa Registra y valida su información de manera digital, a través de nuestra plataforma Consentimiento Expreso Acreditada por la Secretaría de Economía y cumplimiento de la NOM 151</p>
                         </div>
                     </div>
                 </div>
                 <div data-tilt class="hello fadeInRight spacecon wow">
                     <iframe class="img-fluid hello2" src="https://www.youtube.com/embed/XQ7v3He994c?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <img class="img-fluid img-shadow2" src="images/img-4.png" alt="img">
+                    <img class="img-fluid img-shadow2 img-shadow3 img-shadow32" src="images/img-4.png" alt="img">
                 </div>
             </div>
         </div>
-        <div id="features3" class="container">
+        <div class="container">
             <div class="row">
                 <div data-tilt class="hello3 fadeInLeft spacecon wow">
-                    <iframe class="img-fluid hello2" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <img class="img-fluid img-shadow2" src="images/img-4.png" alt="img">
+                    <iframe class="hello2 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
                     <div class="section-title">
@@ -297,21 +313,19 @@ window.onclick = function(event) {
                     <div class="space" style="height: 50px"></div>
                     <div class="bounceInUp feature-item newclass wow" data-wow-duration="2.5s">
                         <div class="feature-item-content">
-                            <h5>Apertura de cuenta&nbsp;</h5>
                             <p style="text-align: justify;">De la opción a sus clientes de abrir una cuenta bancaria de forma fácil, sencilla y sin la necesidad de acudir a una sucursal</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="space" style="height: 92px;"></div>
-        <section id="Industria" class="gradient-bg">
+        <div id="Industria" class="space" style="height: 92px;"></div>
+        <section class="gradient-bg">
             <div class="space" style="height: 60px"></div>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-12">
                         <div class="section-title text-center white">
-                            <span>Industrias</span>
                             <h1>Nuestra plataforma ofrece soluciones específicas para empresas de distintos rubros</h1>
                             <img src="images/dot-white.png" alt="img">
                         </div>
@@ -395,8 +409,8 @@ window.onclick = function(event) {
             </div>
             <div class="space" style="height: 60px"></div>
         </section>
-        <div class="space" style="height: 100px"></div>
-        <div id="Tech" class="container">
+        <div id="Tech" class="space" style="height: 100px"></div>
+        <div class="container">
             <div class="row">
                 <div class="col-lg-5 wow fadeInLeft" data-wow-duration="2.5s">
                     <div class="section-title">
@@ -453,8 +467,8 @@ facial y un score de vida de los individuos procesando esta información de mane
         </div>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 w-75"></lottie-player>
         <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2"></lottie-player>
-        <div class="space" style="height: 100px"></div>
-        <div id="portfolio" class="container">
+        <div id="portfolio" class="space" style="height: 100px"></div>
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center">
@@ -520,8 +534,8 @@ facial y un score de vida de los individuos procesando esta información de mane
                 </div>
             </div>
         </div>
-        <div class="space" style="height: 100px"></div>
-        <section id="" lientes class="gradient-bg">
+        <div id="clientes" class="space" style="height: 100px"></div>
+        <section class="gradient-bg">
             <div class="space" style="height: 60px"></div>
             <div class="container">
                 <div class="row justify-content-center">
@@ -551,8 +565,8 @@ facial y un score de vida de los individuos procesando esta información de mane
             </div>
             <div class="space" style="height: 60px"></div>
         </section>
-        <div class="space" style="height: 120px"></div>
-        <div id="Equipo" class="row">
+        <div id="Equipo" class="space" style="height: 120px"></div>
+        <div class="equipo row">
             <div class="container">
                 <div class="content-head team_2 text-center">
                     <h2 class="heading--title">EQUIPO FUNDADOR</h2>
@@ -655,7 +669,8 @@ facial y un score de vida de los individuos procesando esta información de mane
             </div>
             <!-- .col-md-12 end -->
         </div>
-        <div id="contact" class="container">
+        <div id="contact" class="space" style="height: 120px"></div>
+        <div class="container">
             <div class="row">
                 <div class="wow fadeInLeft" data-wow-duration="2.5s">
                     <div class="section-title">
@@ -709,9 +724,6 @@ de tu empresa</h1>
             </div>
             <column class="Foot">
                 <div class="address-holder dicio">
-                    <div>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15049.515499152316!2d-99.1997201!3d19.4392251!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5a412a4a364f8c5!2sIOS%20OFFICES%20Miyana!5e0!3m2!1ses-419!2smx!4v1609957179203!5m2!1ses-419!2smx" width="300" height="100" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0" class="iframe_phone"></iframe>
-                    </div>
                     <div class="">
                         <i class=""></i> info@dicio.ai
                     </div>
