--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ BLOCKCHAIN</h5>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 text-center wow fadeInRight" data-wow-duration="2.5s">
-                    <img class="gif img-fluid " data-tilt src="images/Sin-ti%CC%81tulo-3.gif" alt="img">
+                    <img class="gif img-fluid " data-tilt src="images/PHONE.gif" alt="img">
                 </div>
             </div>
         </div>
