--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@ window.onclick = function(event) {
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="bnr-shape-img-2 phone">
-                <img src="images/bnr-shape-2.png" alt="logo" width="810" class="imghero">
-                <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-                <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_mlf754me.json" background="transparent" speed="1" loop autoplay class="blob1"></lottie-player>
+                <div class=" bnr-shape-img-2 phone">
+                    <img src="images/bnr-shape-2.png" alt="logo" width="810" class="img1200 imghero">
+                    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                    <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_mlf754me.json" background="transparent" speed="1" loop autoplay class="blob1 blob1200"></lottie-player>
+                </div>
             </div>
         </section>
         <div class="space1"></div>
@@ -247,7 +247,7 @@ window.onclick = function(event) {
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2 blob4k2"></lottie-player>
         <div id="Pilares" class="spce2"></div>
         <div class="cont12 container">
             <div class="pilares row">
@@ -275,12 +275,12 @@ window.onclick = function(event) {
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 w-75"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k w-75"></lottie-player>
         <div id="features3" class="space" style="height: 196px; margin-top: 0;"></div>
         <div class="container">
             <div class="row">
                 <div data-tilt class="hello3 fadeInLeft spacecon wow">
-                    <iframe class="hello2 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="hello12 hello2 hello923 img-fluid" src="https://www.youtube.com/embed/QJKqBbkzAtA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3" src="images/img-4.png" alt="img">
                 </div>
                 <div class="col-lg-5 fadeInLeft spacecon wow" data-wow-duration="2.5s">
@@ -313,7 +313,7 @@ window.onclick = function(event) {
                     </div>
                 </div>
                 <div data-tilt class="hello fadeInRight spacecon wow">
-                    <iframe class="img-fluid hello2" src="https://www.youtube.com/embed/XQ7v3He994c?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="hello123 hello2 hello92 img-fluid" src="https://www.youtube.com/embed/XQ7v3He994c?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <img class="img-fluid img-shadow2 img-shadow3 img-shadow32" src="images/img-4.png" alt="img">
                 </div>
             </div>
@@ -463,8 +463,7 @@ BLOCKCHAIN</h5>
                 </div>
             </div>
         </div>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 w-75"></lottie-player>
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob2"></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_ojqrskc0.json" background="transparent" speed="1" loop autoplay class="blob3 blob34k6 w-75"></lottie-player>
         <div id="portfolio" class="space" style="height: 100px"></div>
         <div class="container">
             <div class="row">
