--- a/index.html
+++ b/index.html
@@ -700,42 +700,48 @@ de tu empresa</h1>
                 </div>
             </div>
         </div>
-        <div class="space" style="height: 125px"></div>
-        <footer class="site-footer">
-            <div class="col-sm-12 text-center">
-                <img src="images/logo-alt.svg" alt="logo" width="153">
+        <div class="space" style="height: 50px;"></div>
+        <footer class="site-footer" style="background-color: #1c7ff4; height: 100%;">
+            <section class="anim">
+                <div class="wave wave1"></div>
+                <div class="wave wave2"></div>
+                <div class="wave wave3"></div>
+                <div class="wave wave4"></div>
+            </section>
+            <div class="logofoot">
+                <img src="images/logo-alt.svg" alt="logo" width="300" class="imgfo">
             </div>
+            <div class="dicio">
+                <div>
+                    <div class="footer">
+                        <li class="footer">
+                            <a href="#feature2">Inicio</a>
+                        </li>
+                        <li class="footer">
+                            <a href="#feature2">Productos</a>
+                        </li>
+                        <li>
+                            <a href="Notice.html" target="_blank">Aviso de privacidad</a>
+                        </li>
+                        <li>
+                            <a href="#cta">Contacto</a>
+                        </li>
+                    </div>
+                </div>
+            </div>
+            <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
             <column class="Foot">
                 <div class="address-holder dicio">
-                    <div class="">
-                        <i class=""></i> info@dicio.ai
+                    <div>
+                        <i></i> info@dicio.ai
                     </div>
-                    <div class="">
-                        <i class=""></i>
+                    <div>
+                        <i></i>
                         <div>Piso 2, iOS Offices, Miyanna
                             <br>
                             Av. Ejército Nacional 769
                             <br>
                             Granada, Miguel Hidalgo 11520, CDMX
-                        </div>
-                    </div>
-                </div>
-                <div class="dicio">
-                    <div>
-                        <h4>DICIO</h4>
-                        <div class="footer">
-                            <li class="footer">
-                                <a href="#feature2">Inicio</a>
-                            </li>
-                            <li class="footer">
-                                <a href="#feature2">Productos</a>
-                            </li>
-                            <li>
-                                <a href="Notice.html" target="_blank">Aviso de privacidad</a>
-                            </li>
-                            <li>
-                                <a href="#cta">Contacto</a>
-                            </li>
                         </div>
                     </div>
                 </div>
@@ -765,7 +771,7 @@ de tu empresa</h1>
                 </div>
             </column>
             <div class="footer-copyright">
-                <p>Copyrighs @DICIO</p>
+                <p>copyright &copy; DICIO 2021. All Right Reserved</p>
             </div>
         </footer>
         <div id="backtotop">
